--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+
 }
 
 img {
@@ -10,6 +11,10 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+  
 }
 
 /* do not edit this footer */
@@ -23,4 +28,29 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.d0{
+  display: flex;
+  justify-content: space-between;
+  padding: 40px;
+}
+
+.text{
+  align-items: center;
+  max-width: 200px;
+  
+}
+
+.d1, .d2, .d3, .d4{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+
+}
+
+.d3 img{
+  padding-right: 40px;
 }
