--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -1,3 +1,9 @@
+html, body{
+  min-height: 100vh;
+}
+
+
+
 * {
   margin: 0;
   padding: 0;
@@ -5,6 +11,12 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+ 
+ 
+  gap:4px;
+  
 }
 
 .container div {
@@ -17,6 +29,20 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1/-1;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+ 
+  
+}
+
+.logo{
+  justify-self: left;
+}
+
+.menu{
+  align-self: center;
 }
 
 .menu ul,
@@ -24,8 +50,30 @@
   font-size: 16px;
 }
 
+.menu ul{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  
+
+}
+
+.nav ul{
+  display: grid;
+  
+  grid-template-columns: repeat(3, 1fr);
+ 
+
+}
+
 .sidebar {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row: repeat(4, 1fr);
+  justify-content: center;
+  align-items: center;
   background-color: #C50208;
+  grid-row: 2/4;
+  gap:50px;
 }
 
 .sidebar .photo {
@@ -34,6 +82,7 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  padding:  70px 100px;
 }
 
 
@@ -42,10 +91,13 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  padding: 70px 100px
 }
 
 .nav {
   background-color: #C50208;
+ 
+  
 }
 
 .nav ul li {
@@ -55,6 +107,10 @@
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap:15px;
+  
 }
 
 .article p {
@@ -68,12 +124,14 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
   color: black;
   font-weight: normal;
   font-size: 14px;
+  padding: 5px;
 }
 
 .card .title {
@@ -83,9 +141,16 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/-1;
 }
 
 .footer p {
   font-size: 13px;
   font-weight: normal;
+  
 }
+
+ul{
+  list-style: none;
+}
+
